--- a/cia/mystyle.css
+++ b/cia/mystyle.css
@@ -21,14 +21,14 @@
     display: block;
     background-color: inherit;
     color: black;
-    padding: 22px 16px;
+    padding: 12px 16px;
     width: 100%;
     border: 1px solid #ccc;
     outline: none;
-    text-align: left;
+    text-align: center;
     cursor: pointer;
     transition: 0.3s;
-    font-size: 18px;
+    font-size: 20px;
     border-radius: 12px;
     border-right: 4px solid black;
     margin: 5px;
@@ -227,6 +227,7 @@ select:focus {
 /* doc */
 
 @import url("https://fonts.googleapis.com/css?family=Hind:300,400&display=swap");
+
 .docContainer {
     margin: 0 auto;
     padding: 1rem;
